turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:22: error: type mismatch;
 found   : Array[Int]
 required: java.awt.Color
  colore(rule(col)(0))
                  ^Turmite:23: error: type mismatch;
 found   : Array[Int]
 required: Int
  mouv(rule(col)(1))
                ^Turmite:24: error: type mismatch;
 found   : Array[Int]
 required: Int
  col=rule(col)(2)
               ^